--- a/index.html
+++ b/index.html
@@ -127,7 +127,145 @@
                     </div>
                 </div>
             </section>
+            <section class="resume">
+                <h3 class="section-title text-center">
+                    A summary of My Resume
+                </h3>
+                <div class="resume-container">
+                    <!-- .resume-colum*2>h3.resume-colum-title+.exprince*3>h4.exprince-title+h5.exprince-sub-title+.exprince-description -->
+                    <div class="resume-colum">
+                        <h3 class="resume-colum-title dark2">My Education</h3>
+                        <div class="exprince">
+                            <h4 class="exprince-title dark2">
+                                Programming Hero
+                            </h4>
+                            <h5 class="exprince-sub-title dark-3">
+                                with Jankar Sir
+                            </h5>
+                            <div class="exprince-description dark-3">
+                                List skill/technologies here. You can change the
+                                icon above to any of the 1500+ FontAwesome 5
+                                free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </div>
+                        </div>
+                        <hr />
+                        <div class="exprince">
+                            <h4 class="exprince-title dark2">
+                                Programming Hero
+                            </h4>
+                            <h5 class="exprince-sub-title dark-3">
+                                with Jankar Sir
+                            </h5>
+                            <div class="exprince-description">
+                                List skill/technologies here. You can change the
+                                icon above to any of the 1500+ FontAwesome 5
+                                free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </div>
+                        </div>
+                        <hr />
+                        <div class="exprince">
+                            <h4 class="exprince-title dark2">
+                                Programming Hero
+                            </h4>
+                            <h5 class="exprince-sub-title dark-3">
+                                with Jankar Sir
+                            </h5>
+                            <div class="exprince-description dark-3">
+                                List skill/technologies here. You can change the
+                                icon above to any of the 1500+ FontAwesome 5
+                                free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="resume-colum">
+                        <h3 class="resume-colum-title dark2">My Experience</h3>
+                        <div class="exprince">
+                            <h4 class="exprince-title dark2">
+                                Sr. Font End Developer
+                            </h4>
+                            <h5 class="exprince-sub-title dark-3">
+                                with Jankar Sir
+                            </h5>
+                            <div class="exprince-description dark-3">
+                                List skill/technologies here. You can change the
+                                icon above to any of the 1500+ FontAwesome 5
+                                free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </div>
+                        </div>
+                        <hr />
+                        <div class="exprince">
+                            <h4 class="exprince-title dark2">
+                                Jr. Font End Developer
+                            </h4>
+                            <h5 class="exprince-sub-title dark-3">
+                                with Jankar Sir
+                            </h5>
+                            <div class="exprince-description dark-3">
+                                List skill/technologies here. You can change the
+                                icon above to any of the 1500+ FontAwesome 5
+                                free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </div>
+                        </div>
+                        <hr />
+                        <div class="exprince">
+                            <h4 class="exprince-title dark2">HTML Developer</h4>
+                            <h5 class="exprince-sub-title dark-3">
+                                with Jankar Sir
+                            </h5>
+                            <div class="exprince-description dark-3">
+                                List skill/technologies here. You can change the
+                                icon above to any of the 1500+ FontAwesome 5
+                                free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center resume-btn">
+                    <button class="btn-primary">Download CV</button>
+                </div>
+            </section>
         </main>
-        <footer></footer>
+        <footer class="secondary-bg">
+            <div class="footer-colum">
+                <h3 class="section-title dark2">Lets Connect</h3>
+                <p class="exprince-description dark2">
+                    Please fill out the form on this section to contact with me
+                    or call between 9:00 A.M and 8.00 P.M ET, Monday through
+                    Friday.
+                </p>
+                <div>
+                    <a href=""
+                        ><img src="style/images/icons/facebook.png" alt=""
+                    /></a>
+                    <a href=""
+                        ><img src="style/images/icons/insta.png" alt=""
+                    /></a>
+                    <a href=""
+                        ><img src="style/images/icons/twitter.png" alt=""
+                    /></a>
+                </div>
+            </div>
+            <div class="footer-colum">
+                <h3 class="section-title dark2">Let’s Inbox me</h3>
+                <form action="">
+                    <input type="text" placeholder="Your Name" />
+                    <input type="text" placeholder="Your Email" />
+                    <textarea
+                        name=""
+                        id=""
+                        cols="50"
+                        rows="10"
+                        placeholder="Massage"
+                    ></textarea>
+                    <button class="btn-primary" type="submit">Submit</button>
+                </form>
+            </div>
+        </footer>
     </body>
 </html>
