addad new update

--- a/index.html
+++ b/index.html
@@ -239,15 +239,17 @@
                     or call between 9:00 A.M and 8.00 P.M ET, Monday through
                     Friday.
                 </p>
-                <div>
-                    <a href=""
+                <div class="btn-icon">
+                    <a target="_blank" href="https://www.facebook.com/"
                         ><img src="style/images/icons/facebook.png" alt=""
                     /></a>
-                    <a href=""
+                    <a
+                        target="_blank"
+                        href="https://www.instagram.com/sohagroy7223/?hl=en"
                         ><img src="style/images/icons/insta.png" alt=""
                     /></a>
-                    <a href=""
-                        ><img src="style/images/icons/twitter.png" alt=""
+                    <a target="_blank" href="https://x.com/home?lang=en "
+                        ><img src="style/images/icons/twitter.png " alt=""
                     /></a>
                 </div>
             </div>
